Fix issues with collapsing margin, Ace Editor sync issues, etc.

--- a/pages/sass/edit.sass
+++ b/pages/sass/edit.sass
@@ -7,6 +7,10 @@ body
     overflow: hidden
 
 
+.invisible
+    display: none
+
+
 /* Overlay */
 
 
@@ -21,6 +25,9 @@ body
    background: rgba(40, 40, 40, .75)
    display: flex
    flex-direction: column
+
+.overlay.invisible
+       display: none
 
 
 .overlay > div
@@ -60,15 +67,11 @@ body
 /* Menu */
 
 #menu
-    padding: 1em
     background: white
     border-bottom: 1px solid #CCC
     min-width: 100%
     box-shadow: 0px 2px 10px #CCC
 
-    // a, button, div
-        // margin-right: 1em
-        // margin-bottom: 1em
 
     .input-field
         display: flex
@@ -94,17 +97,19 @@ body
 /* Playground */
 
 #playground
-    padding-top: 9em
+    padding: 1.5em 0.3em 1.5em 0.3em
 
-
-#playground > .solid_box 
-    margin: 0.7em 0em 0.7em 0em
+#playground > .solid_box
+    // dealing with collapsing margin
+    margin: 1em 0em
+    width: 100%
 
 
 /* Solid and Liquid Box */
 
 .solid_box, .liquid_box
     margin: 0.5em
+    // margin: 1em 0.5em 0em 0.5em
     border-radius: 3px
 
 
@@ -180,6 +185,9 @@ body
 /* Media queries */
 
 @media (min-width: 769px)
+    #playground
+        // padding: 1.3em
+
     #menu_header span > div[contenteditable='true']
         background: #F5F5F5
         padding: 0.3em 0.5em 0.3em 0.5em
@@ -188,11 +196,7 @@ body
         position: fixed
         top: 0px
         padding: 1em
-        background: white
-        border-bottom: 1px solid #CCC
         z-index: 1
-        min-width: 100%
-        box-shadow: 0px 2px 10px #CCC
 
 @media (min-width: 1024px)
     
